# firestore-read

./: README.md  pyproject.toml
src/firestore_read/: __init__.py  server.py
